# worktree-manager

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  HOMEBREW_SETUP.md  LICENSE  README.md  RELEASING.md  dist-workspace.toml  reinstall.sh  uninstall.sh
.beads/: README.md  issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
scripts/: generate-release-notes.sh
src/: add.rs  agent.rs  agent_onboard.md  cli.rs  config.rs  discovery.rs  error.rs  fzf.rs  git.rs  init.rs  interactive.rs  list.rs  main.rs  preview.rs  process.rs  prune.rs  remove.rs  worktree.rs
src/help/: add.md  agent.md  list.md  prune.md  remove.md
