[package]
name = "worktree-manager"
version = "0.1.2"
edition = "2024"
authors = ["Sven Lochner <sven@radialarray.com>"]
description = "Fast, intuitive CLI for managing Git worktrees"
license = "MIT"
repository = "https://github.com/Radialarray/worktree-manager"
homepage = "https://github.com/Radialarray/worktree-manager"
readme = "README.md"
keywords = ["git", "worktree", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.17"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
